discussion/kv_engine/178988/178988_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53304: Enforce holding of stateLock in VBucket::queueItem [3/3]

MB-53304 suggests we ensure that the stateLock is held by passing a ref
to it in queueItem (and the call hierarchy of queueItem).

This patch is the last of the series and refactors all code paths to
pass this ref to the lock as a `VBucketStateLockRef`.

Change-Id: I95b3dfe514eacc9d9d3444bd8cf1f70697d01c7a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-08-22 15:49:25.000000000
Message: 
Uploaded patch set 6: New patch set was added with same tree, parent, and commit message as Patch Set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-22 16:23:09.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19646/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:83:34: error: out-of-line definition of "get" does not match any declaration in "RangeScanCacheCallback" [clang-diagnostic-error]
GetValue RangeScanCacheCallback::get(VBucketStateLockRef vbStateLock,
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:117:18: error: unknown type name "VBucketStateLockRef" [clang-diagnostic-error]
    GetValue get(VBucketStateLockRef vbStateLock,
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19646/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:83:34:
error: out-of-line definition of "get" does not match any declaration in "RangeScanCacheCallback" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19646/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40812/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:117:18:
error: unknown type name "VBucketStateLockRef"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40812/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20866/ : FAILURE

Failure of GoogleTest "DcpTest.DcpDrainMeteredAndThrottled":

<pre>
[ RUN      ] DcpTest.DcpDrainMeteredAndThrottled
[2022-08-22T16:18:50.462Z] unknown file: Failure
[2022-08-22T16:18:50.462Z] C++ exception with description "Header::getResponse(): Header is not a response" thrown in the test body.
[2022-08-22T16:18:50.462Z] [  FAILED  ] DcpTest.DcpDrainMeteredAndThrottled (8 ms)
DcpTest.DcpDrainMeteredAndThrottled
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20866/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21943/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [160/161]: test bucket quota reduction...../kv_engine/engines/ep/tests/ep_testsuite.cc:8477 Test failed: `" (Expected `success", got `no memory" - We should be able to store an item as the BucketQuotaChangeTask should not enforce memory limits until memory usage is low enough.)
[2022-08-22T16:05:11.781Z] (1006 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21943/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21943/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22667/ : FAILURE

Failure of GoogleTest "DcpTest.DcpDrainNoMeterNoThrottle":

<pre>
[ RUN      ] DcpTest.DcpDrainNoMeterNoThrottle
[2022-08-22T16:09:24.712Z] unknown file: Failure
[2022-08-22T16:09:24.712Z] C++ exception with description "Header::getResponse(): Header is not a response" thrown in the test body.
[2022-08-22T16:09:24.712Z] [  FAILED  ] DcpTest.DcpDrainNoMeterNoThrottle (41 ms)
DcpTest.DcpDrainNoMeterNoThrottle
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22667/ )

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x7719f) in AnnotateRWLockAcquired  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22667/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18862/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48560/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21589/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29969/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9339/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9438/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
